Migrate to Java NIO API
Signed-off-by: Sven Strickroth <email@cs-ware.de>